# ghc-generics-from-sop

./: GHCGenericsFromSOP.hs  Generics.hs  generics-from-sop.cabal  ghc-generics-from-sop.cabal
test/: Test.hs
