name: ghc-generics-from-sop
version: 0.1
cabal-version: >= 2.0
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: .
  build-depends:
    base >= 4.12 && < 5,
    generics-sop >= 0.4 && < 0.5
  exposed-modules:
    GHCGenericsFromSOP

test-suite inspection
  type: exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  build-depends: base, ghc-generics-from-sop, generics-sop, inspection-testing >= 0.4
  ghc-options: -main-is Test
